# cnr.sh

./: .pdm-python  404.html  404.md  CNAME  README.md  TODO.md  atom.xml  build.py  colophon.md  index.html  index.md  pyproject.toml  robots.txt  rss.xml  sitemap.txt  sitemap.xml  talks.md
404/: index.html
404.html/: index.html
_essays/: 2012-09-25-kill-subprocesses-linux-bash.md  2012-09-29-streaming-live-sports-schedule-scores-stats-api.md  2012-10-05-kafka-consumer-memory-tuning.md  2017-08-14-one-big-cluster-many-small-ones.md  2017-08-21-choosing-where-to-work.md  2017-08-29-how-paint-bike-shed-kafka-topic-naming-conventions.md  2018-10-23-your-first-technical-presentation.md  2018-10-29-models-microservices-should-be-using-same-continuous-delivery-stack.md  2018-11-05-kafka-change-data-capture-breaks-database-encapsulation.md  2018-11-12-dont-tell-people-what-to-do-ask-them-how-to-do-it.md  2019-01-15-research-cell-animal-human-software-simulation-speed-up-experimentation.md  2019-01-22-kafka-escape-hatch.md  2019-02-19-yes-you-still-need-qa-team-not-for-writing-tests.md  2019-07-29-future-data-engineering.md  2021-06-08-what-the-heck-data-mesh.md  2021-06-21-preventing-technology-turf-wars.md  2021-10-11-google-oauth-without-sdk.md  2021-10-11-google-oauth-wkwebview.md  2021-11-01-missing-readme-books-and-links.md  2021-11-08-work-for-two-companies.md  2021-12-13-how-to-write-a-technical-book.md  2022-06-13-how-to-plan-work-for-infrastructure-team.md
_markdown/: 2019-07-29-future-data-engineering.md
_scripts/: build.sh  sitemap.sh
_templates/: 404.html  (+14 more)
(+275 files in other folders)
